<resources>
    <string name="app_name">Schedule</string>
    <string name="hello">Hello!</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="welcome_to_app">Welcome to App</string>
    <string name="register_to_app">Complete the registration process</string>
    <string name="login_or_email">Login or Email</string>
    <string name="password">Password</string>
    <string name="helperPass">Password must be at least 6 characters</string>
    <string name="helperLogin">Login must be at least 4 characters</string>
    <string name="not_registered">I don\'t have an account</string>
    <string name="login_et">Login</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_send_email_messages_with_news_and_technical_notifications">I agree to send Email messages with news and technical notifications</string>
    <string name="real_data_please">Please enter your real data</string>
    <string name="register">Register</string>
    <string name="registration">Register</string>
    <string name="choose">Choose your group</string>
    <string name="errorNetwork">An error occurred while connecting to the server.</string>
    <string name="detail">Details</string>
    <string name="retry">Retry</string>
    <string name="image">Image</string>
    <string name="left_before_lesson">Left before lesson</string>
    <string name="next_lesson">Next Lesson</string>
    <string name="timer">Timer</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Schedule</string>
    <string name="close">Close</string>
    <string name="fullImage">Full Image</string>
    <string name="night_theme">Night Theme</string>
    <string name="notification">Notification</string>
    <string name="logoff">Logoff</string>
    <string name="profile">Profile</string>
    <string name="temporarily_not_available">Temporarily not available</string>
    <string name="loading">Loading</string>
    <string name="left_before_the_break">Left before the break</string>
    <string name="end_week">The week was over</string>
    <string name="good_rest">Have a good rest</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change Email</string>
    <string name="change_login">Change login</string>
    <string name="disable_the_mailing_list">Disable the mailing list</string>
    <string name="enable_the_mailing_list">Enable the mailing list</string>
    <string name="newpassword">New password</string>
    <string name="newlogin">Enter a new login</string>
    <string name="newEmail">Enter a new email</string>
    <string name="a_new_version_of_the_app_is_available">A new version of the app is available</string>
    <string name="download">Download</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="downloadTitle">Downloading update</string>
    <string name="click_to_download">Click to download</string>
    <string name="preparing_to_download">Preparing to download…</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="service_stopped">The service is stopped</string>
    <string name="click_to_restart">Click to restart</string>
    <string name="left_before">Left before </string>
    <string name="swipedowntoretry">Swipe down to retry</string>
    <string name="reload">Reload</string>
    <string name="replacement">(replacement)</string>
    <string name="today">(today)</string>
    <string name="edit_profile">Edit profile</string>
    <string name="editing_a_profile">Editing a profile</string>
    <string name="enter_the_correct_address">Enter the correct address</string>
    <string name="type_first_and_last_name">Type First and Last name</string>
    <string name="sort_by">Sort by</string>
    <string name="current_day">current day</string>
    <string name="week">week</string>
    <string name="through">Through</string>
    <string name="tomorrow">tomorrow</string>
    <string name="lessons_over_today">Lessons are over for today!</string>
    <string name="messages">Messages</string>
    <string name="schedule_for">Schedule for</string>
    <string name="messages_for">Messages for</string>
    <string name="title">Title</string>
    <string name="message_text">Message text</string>
    <string name="insert_a_link_to_the_image_here">Insert a link to the image here</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="permissions">
        <item>User</item>
        <item>Editor</item>
        <item>Moderator</item>
        <item>Administrator</item>
    </string-array>
    <string name="use_theme_system">Use the theme settings system</string>
    <string name="join_to_group">Join to group</string>
    <string name="create_group">Create group</string>
    <string name="search_group">Search a group</string>
    <string name="group_list">Group list</string>
    <string name="join">Join</string>
    <string name="search_options">Search options</string>
    <string name="nothing_was_found_try_changing_the_search_parameters">Nothing was found. Try changing the search parameters</string>
    <string name="group_name">Group name</string>
    <string name="city">City</string>
    <string name="building">Building</string>
    <string name="only_confirmed_ones">Show only confirmed ones</string>
    <string name="group_name_helper">Enter the group name</string>
    <string name="group_city_helper">Enter your city</string>
    <string name="group_building_helper">Enter your building</string>
    <string name="leave_the_group">Leave the group</string>
    <string name="success_login">Successful login</string>
    <string name="wait">Please wait</string>
    <string name="tired_of_advertising">Tired of advertising?</string>
    <string name="members">Members</string>
    <string name="confirmed_group">Passed verification</string>
    <string name="no_members">No members</string>
    <string name="creator">Creator</string>
    <string name="system">System</string>
    <string name="no_description">No description</string>
    <string name="success_registration">Successful registration</string>
    <string name="failed_get_user_info">Failed to get user information</string>
    <string name="user_already_registered">This user is already registered</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_login_email">Wrong login or email</string>
    <string name="enter_username_and_pass">Enter your username and password</string>
    <string name="enter_data_correct">Enter all data correctly</string>
    <string name="management">Management</string>
    <string name="information_about_the_group">Information about the group</string>
    <string name="get_pro">Get PRO</string>
    <string name="login_must_be">The login must be at least 4 characters long and contain only Latin letters, numbers, and underscores</string>
    <string name="new_notification">New notification</string>
    <string name="photoFromCamera">Photo from the camera</string>
    <string name="imagefromgallery">Image from the gallery</string>
    <string name="deleted">Deleted</string>
    <string name="sended">Sended</string>
    <string name="sure_exit">Are you sure you want to get out?</string>
    <string name="message_will_delete">The message will be deleted</string>
    <string name="stay">Stay</string>
    <string name="exit">Exit</string>
    <string name="attached_picture">The attached picture</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_lessons">No lessons</string>
    <string name="no_lessons_dashboard">No lessons\nPull down to update</string>
    <string name="group_creation">Group creation</string>
    <string name="group_create_desc">Communicate and share information with your classmates, classmates, and colleagues</string>
    <string name="description">Description</string>
    <string name="your_user_does_not_exit">your user does not exist :/</string>
    <string name="you_already_created_group">you have already created a group</string>
    <string name="group_already_exist">this group already exists</string>
    <string name="you_in_group">you are in a group</string>
    <string name="success_created_group">Successfully created. Log in to the group..</string>
    <string name="out_of_the_group">Out of the group</string>
    <string name="pro_status">PRO-status</string>
    <string name="support_the_operation_and_maintenance_of_the_app_by_purchasing_a_pro_status_subscription">Support the operation and maintenance of the app by purchasing a PRO-status subscription</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="what_does_a_subscription_do">What does a subscription do?</string>
    <string name="disabling_ads">Disabling ads</string>
    <string name="lowering_the_file_size_limit_to_100_mb_without_a_subscription_8_mb">Increasing the size of the downloaded file to 50 MB (without a subscription - 4 MB)</string>
    <string name="exclusive_pro_icon_in_your_profile">Exclusive PRO icon in your profile</string>
    <string name="the_profile_card_will_always_be_colored_in_adaptive_colors_for_example">The profile card will always be colored in adaptive colors, for example:</string>
    <string name="improve_your_in_app_experience_by_purchasing_a_subscription_for_a_small_fee">Improve your in-app experience by purchasing a subscription for a small fee.</string>
    <string name="you_canceled_your_purchase">You canceled your purchase</string>
    <string name="you_have_already_purchased">You have already purchased a subscription. Wait for processing</string>
    <string name="error_payment">An error occurred during the payment process. Try again</string>
    <string name="reg_not_complete">Registration is not complete</string>
    <string name="splash_motd">Take off!</string>
</resources>
