<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:onClick="logoff"
        android:text="@string/logoff" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_to_app"
        android:textColor="@color/text_bold_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnjoingroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btncreategroup"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/join_to_group"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btncreategroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/create_group" />
</RelativeLayout>