<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_color"
    android:orientation="vertical"
    android:padding="10dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:met_baseColor="@color/text_color"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/text_color" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/newPassET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        app:met_baseColor="@color/text_color"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_minCharacters="6"
        app:met_primaryColor="@color/text_color" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confirmPassET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:met_baseColor="@color/text_color"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_minCharacters="6"
        app:met_primaryColor="@color/text_color" />

</LinearLayout>